Fix z-index issue with header

--- a/public/loader.css
+++ b/public/loader.css
@@ -7,7 +7,7 @@
   width: 10rem;
   height: 10rem;
 
-  z-index: 10000;
+  z-index: 102;
 }
 
 .loader-bg {
@@ -20,12 +20,12 @@
 
 .loader-primary {
   background-color: var(--background-dark);
-  z-index: 2;
+  z-index: 101;
 }
 
 .loader-secondary {
   background-color: var(--cta);
-  z-index: 1;
+  z-index: 100;
 }
 
 #loader.loaded .loader-logo {
